# estudo_de_caso_rust

./: Cargo.toml  LICENSE  README.md
src/: index.rs  lib.rs  preprocesso.rs  search.rs
tests/: busca_tests.rs  integracao_test.rs
