[package]
name = "projeto"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
petgraph = "0.6"
lru = "0.10"
lazy_static = "1.4"

[package]
name = "projeto"
version = "0.1.0"
edition = "2021"
authors = [ "João Pedro Luz" <"joaopedro123yt@Gmail.com>"]   
description = "Sistema de busca otimizado para catálogo de produtos da MegaStore."
license = "MIT"
repository = "https://github.com/rjluz/estudo_de_caso_rust"  

[dependencies]
regex = "1"
petgraph = "0.6"
lru = "0.10"
lazy_static = "1.4"
